plugins {
    id("com.android.library")
    alias libs.plugins.kotlin.android
    alias libs.plugins.dokka
}

android {

    compileSdk 33

    defaultConfig {
        minSdkVersion 24

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        consumerProguardFiles "consumer-rules.pro"
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }

    kotlinOptions {
        jvmTarget = '11'
    }

    namespace "com.android.identity"
    lint {
        lintConfig file('lint.xml')
    }
}

dependencies {
    implementation project(':identity')
    implementation project(':identity-mdoc')
    implementation(libs.androidx.annotation)
    implementation libs.androidx.biometrics
    implementation libs.cbor
    implementation libs.bouncy.castle.bcprov
    implementation(libs.bouncy.castle.bcpkix)
    implementation libs.volley
    implementation libs.kotlinx.datetime

    testImplementation libs.androidx.test.espresso
    testImplementation libs.androidx.test.ext.junit
    testImplementation libs.bouncy.castle.bcprov
    testImplementation libs.bundles.unit.testing

    androidTestImplementation libs.androidx.test.ext.junit
    androidTestImplementation libs.androidx.test.espresso
}

tasks.withType(Test) {
    testLogging {
        events "standardOut", "passed", "skipped", "failed"
    }
}

apply from: '../publish-helper.gradle'
afterEvaluate {
    publishing {
        publications {
            release(MavenPublication) {
                // Specify custom artifactId if needed,
                // otherwise it will use module's name by default.
                artifactId = "identity-credential-android"
            }
        }
    }
}